* Restructured how capacity and stretch works. Still pending some balance. The values have been set on a different scale, and scenes lockouts should now only be based on cock thickness (not length). There may still be some weirdness. Saves have been tweaked for player, kiakai and rosalin.
* Added mastery skills for all the implemented jobs. These are only unlocked after you reach master level.

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.3t2
-------------
* Fixed a bug where Lagon fight would repeat after siding with Lagon. Doing this also removes the scepter, as intended.
* Fixed a bug in Mothgirl win for female players.
* You can now leave the Mothgirl battle without playing a sex scene.

Version 0.3t
------------
* The search for the scepter is on! Includes about 10k words worth of scenes written by Fenoxo. The Gol has two loss scenes and three win scenes.
* The attack on Lagon has begun!
 - There is a new option to stand up to Lagon when turning in the final ingredient. This will lock you out of the burrows until you resolve the situation.
 - You can choose to Usurp Lagon after you've turned in the final ingredient.
 - Bringing the scepter back brings things to a head, whether you want it or not.
 - There are at least three unique bad ends to be had, and two "success states", depending on who you side with.
 - Vena's restoration isn't implemented yet.
* Mothgirl added, written by Savin. She can be encountered in the forest, and has 2 loss scenes and 3 win scenes.
* It's now a bit easier to figure out which enemy is which and what the order of turns is. Enemies all have a unique number following their name.
* Momo is now available in camp (when rescued) from 4:00 to 21:00.
* The ability to add comments to saves has been added (thanks kspriv!)
* Inventory management just got a hell of a lot cleaner (applies to shops, inventory and combat inventory). Thanks kspriv!